updated api keys and endpoints for production

--- a/src/elements/guuey-verify/guuey-verify.html
+++ b/src/elements/guuey-verify/guuey-verify.html
@@ -409,7 +409,7 @@
             },
 
             goHome:function(){
-              location.href = "https://careplan-c2677.firebaseapp.com";
+              location.href = "https://app.mosaic-care.com";
             },
 
             _closeToast: function() {
