--- a/test/su-profile.html
+++ b/test/su-profile.html
@@ -29,10 +29,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <template>
         <firebase-app
           name="main"
-          auth-domain="careplan-c2677.firebaseapp.com"
-          database-url="https://careplan-c2677.firebaseio.com"
-          api-key="AIzaSyBdtmHIV_7epC0OBiXkTNoqrGRspA58Epc"
-          storage-bucket="careplan-c2677.appspot.com">
+          auth-domain="mosaic-care-5cea8.firebaseio.com"
+          database-url="https://mosaic-care-5cea8.firebaseio.com"
+          api-key="AIzaSyCQDIr1UXMVtl1n-6kYKv_VEPTGTk11QLI"
+          storage-bucket="mosaic-care-5cea8.appspot.com">
         </firebase-app>
       </template>
     </test-fixture>
